--- a/docs/AI/UmichEECS498-007/优化器.md
+++ b/docs/AI/UmichEECS498-007/优化器.md
@@ -130,4 +130,4 @@ for t in range(1, num_steps + 1):
 
 ### 优化算法比较
 
-![](../img/Pasted%20image%2020240617194802.png)
+![](../../img/Pasted%20image%2020240617194802.png)
